Fix overlap on map and time table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 body {font-family: 'Merriweather Sans', sans-serif;
       font-weight: 300;
-      margin: 0;
+      margin: 0 auto;
       padding: 10px;
       color: #FEE715FF;
       background-color: #101820FF;
@@ -41,6 +41,15 @@ h4 {
     background-color: #FEE715FF;
     color: #101820FF;
     text-align:justify;
+    font-size: 1.5em;
+}
+
+p {
+    font-size: 1.5em;
+}
+
+label {
+    font-size: 1.5em;
 }
 
 .logo {
@@ -116,6 +125,9 @@ h4 {
 #section2 {
     height: 200px;
     padding-top: 50px;
+    padding-bottom: 475px;
+    width: 97%;
+    margin: 0 auto;
 }
 
 #osc1 {
@@ -142,7 +154,7 @@ h4 {
 /* section 3 */
 
 .section3 {
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 50px;
     height: 300px;
     margin-bottom: 20px;
@@ -248,7 +260,7 @@ footer > p {
     }
     }
    
-    @media screen and (max-width: 750px) {
+@media screen and (max-width: 750px) {
     #photos {
         column-count: 2;
     }
@@ -294,4 +306,11 @@ input[type=submit] {
 .table_border {
     border: 1px solid #ece9e9;
     border-radius: 7px;
+    text-align: center;
   }
+
+.table_position {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;    
+}
